@@ -250,6 +250,137 @@ class TestHydrogenBondAnalysisIdeal(object):
             "Autocorrelation: Hydrogen bonds were computed with step > 1."
         assert any(warning in rec.getMessage() for rec in caplog.records)
 
+class TestHydrogenBondAnalysisNoRes(object):
+
+    kwargs = {
+        'donors_sel': 'type O',
+        'hydrogens_sel': 'type H H',
+        'acceptors_sel': 'type O',
+        'd_h_cutoff': 1.2,
+        'd_a_cutoff': 3.0,
+        'd_h_a_angle_cutoff': 120.0
+    }
+
+    @staticmethod
+    @pytest.fixture(scope='class')
+    def universe():
+        # create two water molecules
+        """
+                       H4
+                        \
+            O1-H2 .... O2-H3
+           /
+          H1
+        """
+        n_residues = 2
+        u = MDAnalysis.Universe.empty(
+            n_atoms=n_residues*3,
+            trajectory=True,  # necessary for adding coordinates
+            )
+
+        u.add_TopologyAttr('type', ['O', 'H', 'H'] * n_residues)
+        u.add_TopologyAttr('id', list(range(1, (n_residues * 3) + 1)))
+
+        # Atomic coordinates with a single hydrogen bond between O1-H2---O2
+        pos1 = np.array([[0, 0, 0],             # O1
+                        [-0.249, -0.968, 0],    # H1
+                        [1, 0, 0],              # H2
+                        [2.5, 0, 0],            # O2
+                        [3., 0, 0],             # H3
+                        [2.250, 0.968, 0]       # H4
+                        ])
+
+        # Atomic coordinates with no hydrogen bonds
+        pos2 = np.array([[0, 0, 0],             # O1
+                         [-0.249, -0.968, 0],   # H1
+                         [1, 0, 0],             # H2
+                         [4.5, 0, 0],           # O2
+                         [5., 0, 0],            # H3
+                         [4.250, 0.968, 0]      # H4
+                         ])
+
+        coordinates = np.empty((3,  # number of frames
+                                u.atoms.n_atoms,
+                                3))
+        coordinates[0] = pos1
+        coordinates[1] = pos2
+        coordinates[2] = pos1
+        u.load_new(coordinates, order='fac')
+
+        return u
+
+    @staticmethod
+    @pytest.fixture(scope='class')
+    def hydrogen_bonds(universe):
+        h = HydrogenBondAnalysis(
+            universe,
+            **TestHydrogenBondAnalysisNoRes.kwargs
+        )
+        h.run()
+        return h
+
+
+    def test_no_bond_info_exception(self, universe):
+
+        kwargs = {
+            'donors_sel': None,
+            'hydrogens_sel': None,
+            'acceptors_sel': None,
+            'd_h_cutoff': 1.2,
+            'd_a_cutoff': 3.0,
+            'd_h_a_angle_cutoff': 120.0
+        }
+
+        with pytest.raises(NoDataError, match="no bond information"):
+            h = HydrogenBondAnalysis(universe, **kwargs)
+            h._get_dh_pairs()
+
+    def test_first_hbond(self, hydrogen_bonds):
+        assert len(hydrogen_bonds.results.hbonds) == 2
+        frame_no, donor_index, hydrogen_index, acceptor_index, da_dst, angle =\
+            hydrogen_bonds.results.hbonds[0]
+        assert_equal(donor_index, 0)
+        assert_equal(hydrogen_index, 2)
+        assert_equal(acceptor_index, 3)
+        assert_almost_equal(da_dst, 2.5)
+        assert_almost_equal(angle, 180)
+
+    def test_count_by_time(self, hydrogen_bonds):
+        ref_times = np.array([0, 1, 2]) # u.trajectory.dt is 1
+        ref_counts = np.array([1, 0, 1])
+
+        counts = hydrogen_bonds.count_by_time()
+        assert_array_almost_equal(hydrogen_bonds.times, ref_times)
+        assert_array_equal(counts, ref_counts)
+
+    def test_hydrogen_bond_lifetime(self, hydrogen_bonds):
+        tau_timeseries, timeseries = hydrogen_bonds.lifetime(tau_max=2)
+        assert_array_equal(timeseries, [1, 0, 0])
+
+    def test_hydrogen_bond_lifetime_intermittency(self, hydrogen_bonds):
+        tau_timeseries, timeseries = hydrogen_bonds.lifetime(
+            tau_max=2, intermittency=1
+        )
+        assert_array_equal(timeseries, 1)
+
+    def test_no_attr_hbonds(self, universe):
+        hbonds = HydrogenBondAnalysis(universe, **self.kwargs)
+        # hydrogen bonds are not computed
+        with pytest.raises(NoDataError, match=".hbonds attribute is None"):
+            hbonds.lifetime(tau_max=2, intermittency=1)
+
+    def test_logging_step_not_1(self, universe, caplog):
+        hbonds = HydrogenBondAnalysis(universe, **self.kwargs)
+        # using step 2
+        hbonds.run(step=2)
+
+        caplog.set_level(logging.WARNING)
+        hbonds.lifetime(tau_max=2, intermittency=1)
+
+        warning = \
+            "Autocorrelation: Hydrogen bonds were computed with step > 1."
+        assert any(warning in rec.getMessage() for rec in caplog.records)
+
 
 class TestHydrogenBondAnalysisBetween(object):
 
